<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- my_mood strings -->

    <string name="app_name">Companion</string>
    <string name="my_mood_string">My Mood</string>
    <string name="history_string">History</string>
    <string name="history_ek1_string">charts</string>
    <string name="fearful_string">Fearful</string>
    <string name="sep_12_string">SEP12</string>

    <!-- diary strings -->

    <!--	<string name="app_name">Page 1</string>-->
    <!--	<string name="ek_img_content">ExportKit Image</string>-->
    <string name="diary_string">Diary</string>
    <string name="wednesday__march_27___2024_string">Wednesday, March 27 , 2024</string>
    <string name="feeling_stuck_string">Feeling Stuck</string>
    <string name="what_s_making_you_feel_stuck___string">Whats making you feel Stuck ?</string>

    <!-- landing_1 strings -->

    <string name="how_s_you_feeling_today_string">Hows you feeling today </string>
    <string name="grateful_string">Grateful</string>
    <string name="l1_swipe_right_for_more_string">Swipe right for more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- splash_screen strings -->

    <!--	<string name="app_name">Page 1</string>-->
    <!--	<string name="ek_img_content">ExportKit Image</string>-->


    //for chat feature
    <string name="title_chats">Chats</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_users">Users</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="user_image">User image</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="accept_friend_request">Accept Friend Request</string>
    <string name="request_sent">Request sent</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="change_image">Change Image</string>
    <string name="logout">Logout</string>
    <string name="change_status">Change Status</string>
    <string name="create_account">Create account</string>
    <string name="new_friend_request">New friend request</string>
    <string name="login">login</string>
    <string name="welcome_to_quick_chat">Welcome to Quick Chat</string>
    <string name="login_or_create_an_account_to_get_started">Login or create an account to get started</string>
    <string name="chat_icon">Chat icon</string>

</resources>