<androidx.constraintlayout.widget.ConstraintLayout

	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"

	android:id="@+id/landing_1"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">


	<TextView
		android:id="@+id/how_s_you_feeling_today"
		android:layout_width="208dp"
		android:layout_height="24.6dp"
		android:layout_alignParentTop="true"
		android:text="@string/how_s_you_feeling_today_string"
		android:textColor="@color/how_s_you_feeling_today_color"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/current_emoji"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/cancel_vector"
		app:layout_constraintTop_toTopOf="parent" />


	<ImageView
		android:id="@+id/cancel_vector"
		android:layout_width="17dp"
		android:layout_height="10dp"
		android:contentDescription="cancel_vector"
		android:src="@drawable/cancel_vector"
		app:layout_constraintBottom_toTopOf="@+id/current_emoji"
		app:layout_constraintEnd_toStartOf="@+id/how_s_you_feeling_today"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="MissingConstraints" />


	<ImageView
		android:id="@+id/current_emoji"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:contentDescription="current_emoji"
		app:layout_constraintBottom_toBottomOf="@+id/guideline4"
		app:layout_constraintBottom_toTopOf="@+id/l1_space"
		app:layout_constraintDimensionRatio="H,1:1"
		app:layout_constraintEnd_toEndOf="@+id/guideline3"
		app:layout_constraintStart_toStartOf="@+id/guideline2"
		app:layout_constraintTop_toBottomOf="@+id/how_s_you_feeling_today" />

	<TextView
		android:id="@+id/emotion"
		android:layout_width="108.4dp"
		android:layout_height="36.4dp"
		android:layout_below="@+id/l1_space"
		android:layout_gravity="center_horizontal|center"
		android:gravity="center"
		android:text="@string/grateful_string"
		android:textColor="@color/how_s_you_feeling_today_color"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/l1_swipe_right_for_more"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/l1_space" />

	<View
		android:id="@+id/l1_space"
		android:layout_width="9dp"
		android:layout_height="0dp"
		android:background="@drawable/l1_space_shape"
		app:layout_constraintBottom_toTopOf="@+id/guideline6"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="@+id/guideline4" />

	<ImageView
		android:id="@+id/nextImage"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_below="@+id/current_emoji"
		android:alpha="0.5"
		android:contentDescription="nextImage"

		app:layout_constraintBottom_toTopOf="@+id/guideline5"
		app:layout_constraintDimensionRatio="1:1"
		app:layout_constraintStart_toStartOf="@+id/guideline3"
		app:layout_constraintTop_toTopOf="@+id/guideline4" />

	<ImageView
		android:id="@+id/previousImage"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_below="@+id/current_emoji"
		android:alpha="0.5"
		android:contentDescription="previousImage"
		app:layout_constraintBottom_toTopOf="@+id/guideline5"
		app:layout_constraintDimensionRatio="1:1"
		app:layout_constraintEnd_toStartOf="@+id/guideline2"
		app:layout_constraintTop_toTopOf="@+id/guideline4" />

	<TextView
		android:id="@+id/l1_swipe_right_for_more"
		android:layout_width="130.2dp"
		android:layout_height="18.2dp"
		android:layout_below="@+id/emotion"
		android:layout_gravity="center_horizontal|center"
		android:gravity="center"
		android:text="@string/l1_swipe_right_for_more_string"
		android:textColor="@color/how_s_you_feeling_today_color"
		android:textSize="12sp"
		app:layout_constraintBottom_toTopOf="@+id/landing1_nextbutton"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/emotion" />

	<RelativeLayout
		android:id="@+id/landing1_nextbutton"
		android:layout_width="56dp"
		android:layout_height="56dp"
		android:layout_below="@+id/l1_swipe_right_for_more"
		android:background="@drawable/landing1_nextbutton_shape"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/l1_swipe_right_for_more">


		<ImageView
			android:id="@+id/next_vector"
			android:layout_width="25dp"
			android:layout_height="25dp"
			android:layout_centerInParent="true"
			android:contentDescription="next_vector"
			android:src="@drawable/next_vector" />
	</RelativeLayout>


	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.2" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintGuide_percent="0.8" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.4" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.7" />

	<androidx.constraintlayout.widget.Guideline
		android:id="@+id/guideline6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintGuide_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>